--- a/src/Components/CSS/StartingPage.css
+++ b/src/Components/CSS/StartingPage.css
@@ -7,7 +7,7 @@
   align-items: center;
   min-height: 100vh; /* Ensure the container takes up full viewport height */
   background-color: #f0f2f5;
-  font-family: 'Arial', sans-serif;
+  font-family: "Arial", sans-serif;
 }
 
 /* Card Styling */
